test/fixtures/eval/stdin_messages.snapshot
[stdin]
[stdin]:1
with(this){__filename}
^^^^
The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.

SyntaxError: Strict mode code may not include a with statement
    at <node-internal-frames>

Node.js <node-version>
42
42
[stdin]:1
throw new Error("hello")
^

Error: hello
    at [stdin]:1:7
    at <node-internal-frames>
    at [stdin]-wrapper:6:24
    at <node-internal-frames>

Node.js <node-version>
[stdin]:1
throw new Error("hello")
^

Error: hello
    at [stdin]:1:7
    at <node-internal-frames>
    at [stdin]-wrapper:6:24
    at <node-internal-frames>

Node.js <node-version>
100
[stdin]:1
let x = 100; y = x;
               ^

ReferenceError: y is not defined
    at [stdin]:1:16
    at <node-internal-frames>
    at [stdin]-wrapper:6:24
    at <node-internal-frames>

Node.js <node-version>

[stdin]:1
let ______________________________________________; throw 10
                                                    ^
10
(Use `<node-exe> --trace-uncaught ...` to show where the exception was thrown)

Node.js <node-version>

[stdin]:1
let ______________________________________________; throw 10
                                                    ^
10
(Use `<node-exe> --trace-uncaught ...` to show where the exception was thrown)

Node.js <node-version>
done
